...

final class MainPageVC: UIViewController {
    
    let mainView = MainPageView()
    let vm: MainPageViewModelProtocol
    
    let alertTitle: String = "Error ocurred!"
    
    init(vm: MainPageViewModelProtocol) {
        self.vm = vm
        super.init(nibName: nil, bundle: nil)
    }
    
...
